...
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRecipImage" />

    <Button
        android:id="@+id/btnSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="259dp"
        android:layout_marginLeft="259dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="16dp"
...
